Fix overflowing text in get-started box
Due to a fixed height of 500px the text of the get-started box would
overflow when window size is between the tablet breakpoint (786px) and
around 930px. I discovered this when trying to run the feature specs in
a headless browser that coincidentally used this window width.

--- a/app/assets/stylesheets/_map.scss
+++ b/app/assets/stylesheets/_map.scss
@@ -32,7 +32,6 @@
 
   .favorites, .getstarted {
     background-image: image-url("hbg.png");
-    height: 500px;
 
     .content, ul {
       background: #fff;
@@ -72,7 +71,6 @@
 
     .favorites {
       width: 100%;
-      height: auto;
       border-bottom: none;
 
       &.empty { display: none; visibility: hidden; }
